--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: white;
+  background-color: #5FDDA6;
   padding: 10px 20px;
   height: 70px;
 }
@@ -13,10 +13,8 @@
 }
 
 .logo img {
-  height: 100px;
+  height: 200px;
   width: auto;
-  margin-right: 10px;
-  margin-left: 20px;
 }
 
 .logo span {
